--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+dataRetrieval 2.7.5
+==========
+* Fixed some time zone joining bugs that were happening if the timezone column had no information in the first ~100 returned rows.
+* Changed WQP default behavior to a zip return
+* Changed WQP default behavior to a POST instead of GET.
+* Remove mutate_, select_ functions
+
 dataRetrieval 2.7.3
 ==========
 * Reworked whatNWISdata to allow the full flexibility of `...`
