--- a/NEWS
+++ b/NEWS
@@ -2,8 +2,7 @@ dataRetrieval 2.7.5
 ==========
 * Fixed some time zone joining bugs that were happening if the timezone column had no information in the first ~100 returned rows.
 * Changed WQP default behavior to a zip return
-* Changed WQP default behavior to a POST instead of GET.
-* Remove mutate_, select_ functions
+* Remove reshape2 and dplyr dependencies
 
 dataRetrieval 2.7.3
 ==========
