--- a/vignettes/usMaps.Rmd
+++ b/vignettes/usMaps.Rmd
@@ -43,6 +43,8 @@ to_sp <- function(...){
 }
 ```
 
+Next, we have a function that scales, shifts, and rotates the "sp" objects:
+
 ```{r shift}
 shift_sp <- function(sp, scale, shift, 
                      rotate = 0, ref=sp, 
@@ -74,6 +76,8 @@ shift_sp <- function(sp, scale, shift,
 
 ```
 
+For the United States, this function will get call the `shift_sp` function on the state/territory boundaries.
+
 ```{r resetstates}
 reset_states <- function(move_variables, stuff_to_move){
   states.out <- to_sp("state")
@@ -84,12 +88,13 @@ reset_states <- function(move_variables, stuff_to_move){
                                    proj.string = sp::proj4string(conus),
                                    row.names = i))
     states.out <- rbind(shifted, states.out, makeUniqueIDs = TRUE)
-    
   }
   return(states.out)
 }
 
 ```
+
+This function will move the points in the states/territories.
 
 ```{r resetPoints}
 reset_points <- function(x, move_variables,stuff_to_move,
@@ -154,7 +159,8 @@ plot_points_on_map <- function(x, move_variables, stuff_to_move,
     theme_minimal() +
     theme(panel.grid = element_blank(),
           axis.text = element_blank(),
-          axis.title = element_blank())
+          axis.title = element_blank()) +
+    coord_fixed()
   
   if(scale_by_color & scale_by_size){
     gsMap <- gsMap +
@@ -221,7 +227,6 @@ x <- data.frame(dec_long_va = c(-89,-156.3,-148.6,-66.5),
 plot_points_on_map(x, move_variables, stuff_to_move)
 
 ```
-
 
 Now, let's get some data from `dataRetrieval`. We'll call the "site" service using `readNWISdata`, only pulling stream sites that have measured "Phosphorus, water, unfiltered, milligrams per liter as phosphorus" at least 100 times over at least 10 years:
 
