--- a/README.Rmd
+++ b/README.Rmd
@@ -63,6 +63,14 @@ specificCond <- readWQPqw(siteNumbers = 'WIDNR_WQX-10032762',
 
 ```
 
+## Network Linked Data Index
+
+```{r NLDI, eval=FALSE}
+features <- findNLDI(nwis = "01491000",
+                     nav = "UT",
+                     find = c('basin', 'wqp'))
+```
+
 # Reporting bugs
 
 Please consider reporting bugs and asking questions on the Issues page:
