--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ dataRetrieval 2.7.6
 * Adjusted Water Quality Portal (WPQ) URLs to follow new structure
 * Fixed bug where some WQP results were being duplicated
 * Added an argument to readWQPdata to ignore fetching site and parameter attributes.
-
+* Fixed timezone bug in RDB requests that had mixed timezones.
 
 dataRetrieval 2.7.5
 ==========
