--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ dataRetrieval 2.7.6
 * Fixed bug where some WQP results were being duplicated
 * Added an argument to readWQPdata to ignore fetching site and parameter attributes.
 * Fixed timezone bug in RDB requests that had mixed timezones.
+* Updated internal data for parameter codes
 
 dataRetrieval 2.7.5
 ==========
